--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+
+      <div id="confirmationMessage">
+        <span>Event has been stored to </span>
+        <span class="storage-message">Local Storage</span>
+      </div>
+      
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
